# Plexiglass

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  readme.md
data/: skeleton.hpp  template.cpp  template.hpp
integration-tests/: CMakeLists.txt  main.cpp
integration-tests/basic-test/: base.txt  input.txt  lexer.txt
integration-tests/source/: main.cpp  path.hpp
plexi/: CMakeLists.txt
plexi/source/: main.cpp
plexlib/: CMakeLists.txt
plexlib/source/: error.cpp  error.hpp  plexlib.cpp  plexlib.hpp  utils.cpp  utils.hpp
plexlib/source/analyzer/: analyzer.cpp  analyzer.hpp
plexlib/source/lexer/: lexer.cpp  lexer.hpp  token.cpp  token.hpp
plexlib/source/parser/: parser.cpp  parser.hpp  tree.cpp  tree.hpp
plexlib/source/template/: template.cpp  template.hpp
plexlib/source/templater/: templater.cpp
plexlib/source/unused/: plexlib.cpp
plexlib/templates/: template-holder.hpp  template.cpp  template.hpp
source/plexi/: main.cpp
source/plexlib/: FiniteStateMachine.cpp  FiniteStateMachine.hpp  RegularExpressionParser.cpp  error.cpp  error.hpp  lexer.cpp  lexer.hpp  plexlib.cpp  plexlib.hpp  token.cpp  utils.cpp
source/plexlib/analyzer/: analyzer.cpp  analyzer.hpp
source/plexlib/lexer/: lexer.cpp  lexer.hpp  rules.cpp  rules.hpp  token.cpp  token.hpp
source/plexlib/parser/: parser.cpp  parser.hpp  tree.cpp  tree.hpp
source/plexlib/std/: exception  filesystem  fstream  functional  iostream  ostream  queue  sstream  string  string_view  vector
source/plexlib/template/: template.cpp  template.hpp
source/plexlib/unused/: RegularExpressionParser.hpp
source/test/: main.cpp  read_test_file.hpp  test_lexer.cpp  test_parameters.cpp  test_parser.cpp  test_semantics.cpp  test_template.cpp  test_tree.cpp
tests/lexer/: 01-base.txt  01-in.bc  01-in.txt  01-out-base.txt  lexer-test-base.txt  lexer-test-in.txt
tests/parser/: 001-base.txt  002-base.txt  101-in.txt  103-base.txt  104-in.txt  201-base.txt  204-base.txt  207-base.txt  207-in.txt  208-in.txt  301-base.txt  303-base.txt  304-base.txt  305-base.txt  306-base.txt  307-base.txt  pattern-long-line.txt  pattern-with-duplicate-alternator.txt  rule-with-produce-at-eof.txt
tests/parser-fail/: 001-base.txt  002-base.txt  02-in.txt  03-in.txt  04-in.txt  05-in.txt  06-in.txt  07-in.txt  08-in.txt  09-in.txt  10-in.txt  102-base.txt  102-in.txt  103-base.txt  103-in.txt  104-base.txt  11-in.txt  201-in.txt  202-in.txt  203-in.txt  204-base.txt  204-in.txt  206-base.txt  207-base.txt  208-base.txt  301-in.txt  302-in.txt  304-in.txt  305-in.txt  306-in.txt
tests/semantics/: 101-base.txt  101-in.txt  102-in.txt  103-base.txt  104-in.txt  105-base.txt  105-in.txt  106-base.txt  107-base.txt  107-in.txt  301-base.txt  302-base.txt  303-base.txt  pattern-expression-name-conflict.txt  pattern-name-undefined.txt  reject-pattern-statements.txt  rule-using-rewind.txt
tests/template/: L101-base.cpp  template_test-base.hpp
tests/tree/: 001-base.txt  001-in.txt  002-base.txt  003-base.txt  101-base.txt  101-in.txt  102-in.txt  103-base.txt  103-in.txt  104-base.txt  105-in.txt  106-base.txt  201-base.txt  201-in.txt  202-base.txt  202-in.txt  203-base.txt  204-base.txt  expression-many.txt  expression-single.txt  expression-two.txt  pattern-two-alternatives-one-symbol.txt  rule-many-actions.txt  rule-two-base.txt
unit-tests/: CMakeLists.txt
unit-tests/source/: doctest.h  main.cpp  test_files.hpp  test_lexer.cpp  test_parameters.cpp  test_parser.cpp  test_semantics.cpp  test_template.cpp  test_tree.cpp
unit-tests/test-files/lexer/: lexer-test-base.txt  lexer-test-in.txt
unit-tests/test-files/parser/: expression-with-no-indent.txt  pattern-empty.txt  pattern-with-alternator-at-start.txt  rule-with-empty-produce.txt  rule-with-empty-state.txt  rule-with-no-action.txt  rule-with-state-at-eof.txt
unit-tests/test-files/semantics/: pattern-name-undefined-far-in.txt  rule-duplicate-decrement.txt  rule-duplicate-increment.txt  rule-duplicate-mismatched-decrement.txt  rule-duplicate-mismatched-increment.txt  rule-duplicate-produce-nothing.txt  rule-duplicate-produce.txt  rule-duplicate-rewind.txt  rule-duplicate-transition.txt  rule-transition-to-initial.txt  rule-transition-to-jail.txt  rule-transition-to-nowhere.txt  rule-transition-to-self-initial.txt  rule-transition-to-self-other.txt  rule-unreachable-state.txt  rule-using-transition.txt
unit-tests/test-files/template/: debug-base.cpp  debug-base.hpp  full-base.cpp  full-base.hpp  full-in.txt  simple-base.cpp  simple-base.hpp  template_test-base.cpp  template_test-base.hpp  template_test_debug-base.cpp  template_test_debug-base.hpp  template_test_debug-in.txt
unit-tests/test-files/tree/: expression-two-base.txt  multiple-patterns-multiple-alternatives.txt  pattern-many-alternatives-many-symbols-base.txt  pattern-one-alternative-two-symbols-base.txt  rule-many-actions-base.txt  rule-many-actions.txt  rule-many.txt  rule-single-base.txt
